@@ -48,6 +48,7 @@
   <ItemGroup>
     <Compile Include="Commands\BaseCommand.cs" />
     <Compile Include="Commands\CompositeCommand.cs" />
+    <Compile Include="Commands\IfCommand.cs" />
     <Compile Include="Commands\PrintLineCommand.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\PrintCommand.cs" />
@@ -63,6 +64,7 @@
     <Compile Include="Expressions\BaseExpression.cs" />
     <Compile Include="Expressions\BinaryExpression.cs" />
     <Compile Include="Expressions\ConstantExpression.cs" />
+    <Compile Include="Expressions\ExpressionUtilities.cs" />
     <Compile Include="Expressions\NameExpression.cs" />
     <Compile Include="Expressions\SubtractExpression.cs" />
     <Compile Include="Expressions\IExpression.cs" />
